--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,5 +46,5 @@ importFrom(ks,kde)
 importFrom(parallel,detectCores)
 importFrom(raster,buffer)
 importFrom(scales,alpha)
-importFrom(spatstat,nndist)
+importFrom(spatstat.geom,nndist)
 importFrom(tcltk,setTkProgressBar)
